[package]
name = "voxeltron-plugin-api"
version = "0.1.0"
edition = "2021"
authors = ["Voxeltron Team <team@voxeltron.dev>"]
license = "Apache-2.0"
repository = "https://github.com/deep-thinking-llc/voxeltron-plugin-api"
description = "Stable public plugin and embedding traits for Voxeltron"

[lib]
name = "voxeltron_plugin_api"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
jsonwebtoken = "9"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
